syntax = "proto3";

package proto;

option go_package = "core/protobuf/";

enum Direction {
  NONE  = 0;
  LEFT  = 1;
  RIGHT = 2;
  UP    = 3;
  DOWN  = 4;
}

message MoveAction {
  Direction vert = 1;
  Direction hori = 2;
}

message ShootAction {
  // shoot target coordinates
  Position pos = 1;
}

message PlayerAction {
  oneof action {
    MoveAction  move  = 1;
    ShootAction shoot = 2;
  }
}

message PlayerInput {
  repeated PlayerAction player_actions = 1;
}

message Position {
  float x = 1;
  float y = 2;
}

message PlayerState {
  Position pos    = 1;
  uint32   health = 2;
}

message BulletState {
  Position pos  = 1;
  float    size = 2;
}

message WorldState {
  repeated PlayerState players = 1;
  repeated BulletState bullets = 2;
}